# trl4llm

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  data_preprocess.py  inference.py  pyproject.toml  train.py
.github/: PULL_ERQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ask for question.md  bug report.md  feature advice.md  feature request.md
data_preprocess/: gsm8k.py  ruozhiba.py  stack_exchange.py
example/data_preprocess/: README.md  ruozhiba.py
playground/: test.prompt.ipynb
scripts/: data_preprocess.sh  model_download.py  model_download.sh  train.sh
scripts/wandb/: latest-run
scripts/wandb/run-20250325_030450-cz6uws6b/: run-cz6uws6b.wandb
scripts/wandb/run-20250325_030450-cz6uws6b/files/: config.yaml  requirements.txt  wandb-metadata.json
trl4llm/configs/: __init__.py
trl4llm/configs/dpo_config/: stack_exchange.py
trl4llm/configs/grpo_config/: gsm8k.py  ruozhiba.py
trl4llm/configs/ppo_config/: gsm8k.py
trl4llm/reward_score/: README.md  gsm8k.py  ruozhiba.py
trl4llm/scripts/: train.sh
trl4llm/trainer/: dpo.py  grpo.py  ppo.py
