[project]
name = "trl4llm"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.4.0",
    "sentence-transformers>=3.4.1",
    "transformers>=4.49.0",
    "trl>=0.15.2",
    "unsloth>=2025.3.14",
    "vllm>=0.7.3",
]

[tool.hatch.build.targets.wheel]
packages = ["trl4llm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 79

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]
